[package]
name = "yaxpeax-dis"
version = "0.2.9"
authors = ["iximeow <me@iximeow.net>"]
license = "0BSD"
edition = "2018"
keywords = ["disassembly", "disassembler"]
repository = "https://git.iximeow.net/yaxpeax-dis/about/"
description = "disassembly tool using yaxpeax instruction decoders"
readme = "README.md"

[[bin]]
name = "yaxdis"
path = "src/main.rs"

[dependencies]
clap = "2.33"
hex = "0.4.0"
num-traits = "0.2.10"

# common interfaces for all yaxpeax decoders
yaxpeax-arch-02 = { package = "yaxpeax-arch", version = "0.2.4" }
yaxpeax-arch-01 = { package = "yaxpeax-arch", version = "0.0.5" }

yaxpeax-arm = { version = "0.1.1" }
yaxpeax-avr = { version = "0.1.0" }
yaxpeax-m16c = { version = "0.1.0" }
yaxpeax-mips = { version = "0.1.0" }
yaxpeax-msp430 = { version = "0.1.0" }
yaxpeax-lc87 = { version = "1.0.0" }
yaxpeax-pic17 = { version = "0.1.0" }
yaxpeax-pic18 = { version = "0.1.0" }
yaxpeax-x86 = { version = "1.0.4" }
yaxpeax-ia64 = { version = "0.2.1" }
yaxpeax-superh = { version = "0.1.0" }
yaxpeax-6502 = { version = "0.0.1" }
