[package]
name = "yaxpeax-dis"
version = "0.2.9"
authors = ["iximeow <me@iximeow.net>"]
license = "0BSD"
edition = "2018"
keywords = ["disassembly", "disassembler"]
repository = "https://git.iximeow.net/yaxpeax-dis/about/"
description = "disassembly tool using yaxpeax instruction decoders"
readme = "README.md"

[[bin]]
name = "yaxdis"
path = "src/main.rs"

[patch.crates-io]
yaxpeax-arch-02 = { package = "yaxpeax-arch", path = "/toy/yaxpeax/yaxpeax-arch/" }

[dependencies]
clap = "2.33"
hex = "0.4.0"
num-traits = "0.2.10"
itertools = "0.10.1"

# common interfaces for all yaxpeax decoders
yaxpeax-arch-02 = { package = "yaxpeax-arch", version = "0.2.4" , default-features = false, features = ["std"] }

yaxpeax-arm = { version = "0.2.3" }
yaxpeax-avr = { version = "0.1.0" }
yaxpeax-m16c = { version = "0.1.0" }
yaxpeax-mips = { version = "0.1.0" }
yaxpeax-msp430 = { version = "0.1.0", path = "/toy/yaxpeax/arch/msp430" }
yaxpeax-lc87 = { version = "1.0.0" }
yaxpeax-pic17 = { version = "0.1.0" }
yaxpeax-pic18 = { version = "0.1.0" }
yaxpeax-x86 = { version = "1.1.3", default-features = false, features = ["fmt", "std"] }
yaxpeax-ia64 = { version = "0.2.1" }
yaxpeax-superh = { version = "0.3.0" }
yaxpeax-6502 = { version = "0.0.2", features = ["std"] }
